--- a/#src/scss/_fonts.scss
+++ b/#src/scss/_fonts.scss
@@ -1,1 +1,2 @@
-@include font("OpenSans", "OpenSans-Regular", 400, "normal");
+@include font("HeliosC", "HeliosC-Regular", 400, "normal");
+@include font("HeliosC", "HeliosC-Bold", 700, "normal");
