--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -6,4 +6,6 @@
   --color-main-blue: #003264;
   --color-background: #e5e5e5;
   --color-gray: #c3c8c8;
+  --color-dark: #242627;
+  --color-subname: #828282;
 }
