--- a/#src/scss/adaptive/_mobile.scss
+++ b/#src/scss/adaptive/_mobile.scss
@@ -206,3 +206,40 @@
     color: var(--color-dark);
   }
 }
+
+.video {
+  display: flex;
+  padding: 20px 0;
+  width: 100%;
+
+  &__section {
+    width: 100%;
+  }
+
+  &__playBtn {
+    position: relative;
+    border: 1px var(--color-black) solid;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+  }
+}
+
+.title {
+  font-size: 22px;
+  line-height: 1.25em;
+  text-align: center;
+}
+
+.values {
+  margin-top: 77px;
+
+  .swiper-wrapper {
+    padding: 10px;
+  }
+
+  .swiper-slide {
+    padding: 15px 0;
+  }
+}
