--- a/CADeasign/css/style.css
+++ b/CADeasign/css/style.css
@@ -728,6 +728,45 @@ svg path {
     text-align: center;
     color: var(--color-dark);
   }
+
+  .video {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 20px 0;
+    width: 100%;
+  }
+
+  .video__section {
+    width: 100%;
+  }
+
+  .video__playBtn {
+    position: relative;
+    border: 1px var(--color-black) solid;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+  }
+
+  .title {
+    font-size: 22px;
+    line-height: 1.25em;
+    text-align: center;
+  }
+
+  .values {
+    margin-top: 77px;
+  }
+
+  .values .swiper-wrapper {
+    padding: 10px;
+  }
+
+  .values .swiper-slide {
+    padding: 15px 0;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 1023px) {
