--- a/#src/scss/_settings.scss
+++ b/#src/scss/_settings.scss
@@ -14,7 +14,7 @@ body {
   font-family: "HeliosC", sans-serif;
   font-weight: 400;
   color: var(--color-dark);
-  background-color: var(--color-white);
+  background-color: var(--color-grey);
 }
 
 img {
