--- a/CADeasign/css/style.css
+++ b/CADeasign/css/style.css
@@ -416,7 +416,7 @@ body {
   font-family: "HeliosC", sans-serif;
   font-weight: 400;
   color: var(--color-dark);
-  background-color: var(--color-white);
+  background-color: var(--color-grey);
 }
 
 img {
@@ -476,6 +476,7 @@ svg path {
   --color-gray: #c3c8c8;
   --color-dark: #242627;
   --color-subname: #828282;
+  --color-grey: #f2f2f2;
 }
 
 @media (min-width: 1024px) {
@@ -525,14 +526,14 @@ svg path {
   }
 
   .header .menu {
-    opacity: 0;
+    opacity: 1;
     -webkit-transition: opacity 0.5s ease;
     -o-transition: opacity 0.5s ease;
     transition: opacity 0.5s ease;
   }
 
   .header .menu__body {
-    z-index: 5;
+    z-index: 12;
     background-color: var(--color-black);
   }
 
@@ -625,6 +626,7 @@ svg path {
     text-align: center;
     color: var(--color-white);
     background-color: var(--color-orange);
+    cursor: pointer;
   }
 
   .main {
@@ -730,42 +732,439 @@ svg path {
   }
 
   .video {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    position: relative;
     padding: 20px 0;
     width: 100%;
   }
 
   .video__section {
+    position: relative;
     width: 100%;
+    height: 207px;
   }
 
-  .video__playBtn {
+  .video__play {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .video__play-btn {
     position: relative;
-    border: 1px var(--color-black) solid;
+    border: 1px solid rgba(195, 200, 200, 0.36);
     border-radius: 50%;
     width: 50px;
     height: 50px;
     background-color: transparent;
   }
 
+  .video__play-btn::after {
+    content: "";
+    position: absolute;
+    left: 55%;
+    top: 50%;
+    border: 5px solid transparent;
+    border-left: 6px solid var(--color-white);
+    width: 10px;
+    height: 10px;
+    -webkit-transform: translate(-50%, -55%);
+        -ms-transform: translate(-50%, -55%);
+            transform: translate(-50%, -55%);
+  }
+
   .title {
-    font-size: 22px;
+    margin: 5px 0;
+    font-weight: 400;
+    font-size: 21px;
     line-height: 1.25em;
     text-align: center;
   }
 
+  .item-title {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.75em;
+    color: var(--color-dark);
+  }
+
+  .links {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.23em;
+    text-decoration: none;
+    color: var(--color-blue);
+  }
+
   .values {
-    margin-top: 77px;
+    margin-top: 15px;
+    background-color: var(--color-grey);
   }
 
-  .values .swiper-wrapper {
-    padding: 10px;
+  .values__wrapper {
+    padding: 10px 10px 60px;
   }
 
-  .values .swiper-slide {
-    padding: 15px 0;
+  .values__slider {
+    margin-top: 15px;
+  }
+
+  .values__item-title {
+    margin: 0;
+    padding: 40px 37px 8px 27px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.75em;
+  }
+
+  .values__item-desc {
+    margin: 0;
+    padding: 10px 37px 35px 27px;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.85em;
+  }
+
+  .values .swiper-pagination {
+    bottom: 25px;
+    display: block;
+  }
+
+  .vacancies {
+    z-index: 10;
+    background-color: var(--color-white);
+  }
+
+  .vacancies__container {
+    padding: 31px 20px 23px;
+  }
+
+  .vacancies__title {
+    margin: 11px 0 10px;
+  }
+
+  .vacancies__select-wrapper {
+    position: relative;
+    margin: 23px auto 0;
+    padding: 10px 0;
+    max-width: 274px;
+  }
+
+  .vacancies__select-trigger {
+    position: relative;
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 18px;
+    width: 100%;
+    height: 56px;
+    background-color: #f2f2f2;
+    cursor: pointer;
+  }
+
+  .vacancies__select-trigger::after {
+    content: "";
+    position: absolute;
+    right: 15px;
+    top: 27px;
+    border: 2px solid transparent;
+    border-top: 5px solid var(--color-subname);
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    -o-transition: transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+  }
+
+  .vacancies .select-active {
+    padding-right: 10px;
+  }
+
+  .vacancies .select-active,
+  .vacancies .vacancies__select-option {
+    font-size: 14px;
+    line-height: 1.21em;
+    color: var(--color-subname);
+  }
+
+  .vacancies__select-options {
+    position: absolute;
+    top: -10px;
+    z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #f2f2f2;
+    opacity: 0;
+    -webkit-transition: top 0.5s, opacity 0.3s;
+    -o-transition: top 0.5s, opacity 0.3s;
+    transition: top 0.5s, opacity 0.3s;
+  }
+
+  .vacancies__select-option {
+    z-index: 10;
+    border-top: 1px solid var(--color-subname);
+    padding: 10px 20px;
+  }
+
+  .vacancies__select-option:hover,
+  .vacancies__select-option:focus,
+  .vacancies__select-option:active {
+    background-color: #dfdfdf;
+  }
+
+  .select-open {
+    top: 65px;
+    z-index: 11;
+    opacity: 1;
+  }
+
+  .vacancy__wrapper {
+    overflow: hidden;
+    height: 412px;
+    -webkit-transition: height 1s;
+    -o-transition: height 1s;
+    transition: height 1s;
+  }
+
+  .vacancy__item {
+    border-top: 1px solid #e0e0e0;
+    padding: 30px 50px 32px 0;
+  }
+
+  .vacancy__salary {
+    margin-top: 20px;
+    font-size: 13px;
+    line-height: 1.23em;
+    color: var(--color-subname);
+  }
+
+  .vacancy__name {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.25em;
+  }
+
+  .vacancy__btn {
+    margin: 30px auto 0;
+  }
+
+  .vacancy-open {
+    height: 100%;
+  }
+
+  .history {
+    margin: 0 0 20px;
+    padding: 40px 0 20px;
+  }
+
+  .history__title {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 1.4em;
+    color: var(--color-dark);
+  }
+
+  .history__slider {
+    margin-top: 40px;
+  }
+
+  .history__slide {
+    padding-bottom: 40px;
+  }
+
+  .history__content {
+    position: relative;
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    height: 300px;
+    -webkit-box-shadow: 0 14px 24px rgba(15, 18, 20, 0.1);
+            box-shadow: 0 14px 24px rgba(15, 18, 20, 0.1);
+    background-color: var(--color-white);
+  }
+
+  .history__content::after {
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    z-index: 5;
+    width: 256px;
+    height: 15px;
+    -webkit-box-shadow: 0 14px 24px rgba(15, 18, 20, 0.1);
+            box-shadow: 0 14px 24px rgba(15, 18, 20, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  .history__photo {
+    margin-top: 23px;
+    border-radius: 50px;
+    width: 80px;
+    height: 80px;
+    background: url("../../img/history/history-mob.png") no-repeat;
+    background-position: center;
+  }
+
+  .history__name {
+    margin-top: 30px;
+    font-size: 20px;
+    line-height: 1.4em;
+    text-align: center;
+    color: var(--color-dark);
+  }
+
+  .history__role {
+    margin-top: 3px;
+    font-size: 13px;
+    line-height: 2.15em;
+    letter-spacing: 0.015em;
+    text-align: center;
+    color: var(--color-subname);
+  }
+
+  .history__link {
+    margin-top: 20px;
+  }
+
+  .history .swiper-pagination {
+    bottom: 74px;
+  }
+
+  .footer {
+    padding-bottom: 30px;
+    color: var(--color-dark);
+  }
+
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 auto;
+    padding: 10px 0;
+    max-width: 280px;
+  }
+
+  .footer__title {
+    margin: 22px 0 5px 8px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.215em;
+    text-align: center;
+  }
+
+  .footer__telephone {
+    margin: 10px 0 0 7px;
+    font-size: 30px;
+    line-height: 1.23em;
+  }
+
+  .footer__link {
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 1.19em;
+  }
+
+  .footer__btn {
+    margin: 30px 0 0;
+  }
+
+  .footer__socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 30px;
+    width: 223px;
+  }
+
+  .footer__social-link {
+    border: 1px solid #e0e0e0;
+  }
+
+  .footer__social-link:first-child .footer__social-img {
+    width: 25%;
+  }
+
+  .footer__social-link:last-child .footer__social-img {
+    width: 15%;
+  }
+
+  .footer__social-link:nth-child(2) .footer__social-img,
+  .footer__social-link:nth-child(3) .footer__social-img {
+    width: 15%;
+  }
+
+  .footer__social-item {
+    width: 48px;
+    height: 35px;
+  }
+
+  .footer__social-img {
+    display: block;
+    margin: 0 auto;
+    height: 100%;
+    fill: var(--color-orange);
+  }
+
+  .footer__adress {
+    margin-top: 59px;
+    font-size: 11px;
+    line-height: 1.45em;
+    text-align: center;
+    color: var(--color-subname);
+  }
+
+  .footer__politics {
+    margin-top: 5px;
+    font-size: 11px;
+    line-height: 1.27em;
+  }
+
+  .footer__logo {
+    margin-top: 13px;
+    height: 16px;
+    max-width: 68px;
   }
 }
 
@@ -788,7 +1187,7 @@ svg path {
     top: 2px;
     width: 28px;
     height: 2px;
-    background-color: var(--color-black);
+    background-color: #003264;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
@@ -807,8 +1206,8 @@ svg path {
 
   .header .menu__body {
     position: fixed;
-    left: 0;
-    top: -1000px;
+    right: -340px;
+    top: 0;
     padding: 60px 40px 30px;
     width: 100%;
     height: 472px;
@@ -818,8 +1217,8 @@ svg path {
     transition: top 0.3s ease 0s;
   }
 
-  .header .menu .is-active {
-    z-index: 8;
+  .header .menu__body.is-active {
+    right: 0;
     opacity: 1;
   }
 }
