--- a/#src/scss/_settings.scss
+++ b/#src/scss/_settings.scss
@@ -17,6 +17,14 @@ body {
   background-color: var(--color-grey);
 }
 
+.body__wrapper {
+  overflow: auto;
+  padding-top: 70px;
+  width: 100%;
+  height: 100vh;
+  scroll-behavior: smooth;
+}
+
 img {
   max-width: 100%;
 }
