--- a/#src/scss/adaptive/_desktop.scss
+++ b/#src/scss/adaptive/_desktop.scss
@@ -1,12 +1,152 @@
+.container {
+  max-width: 1222px;
+}
+
+.body__wrapper {
+  padding: 0;
+  background-color: var(--color-white);
+}
+
 .header {
+  position: relative;
+  border-bottom: 1px solid #f2f2f2;
+  max-height: 98px;
+
   .menu {
+    max-height: 98px;
+
     &__list {
       display: flex;
+      flex-direction: row;
       align-items: center;
+      justify-content: space-between;
+      height: 100%;
+      max-width: 868px;
+    }
 
-      li {
-        padding: 10px;
+    &__item {
+      position: relative;
+      display: flex;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      height: 98px;
+      font-size: 16px;
+      line-height: 1.25em;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--color-orange);
+        opacity: 0;
+        transition: opacity 0.3s;
+      }
+
+      &:not(:first-child) {
+        margin-top: 0;
+      }
+
+      &:hover {
+        &:not(:last-child) {
+          &::after {
+            opacity: 1;
+          }
+        }
       }
     }
+
+    &__icon {
+      display: none;
+    }
+
+    &__body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 868px;
+      background-color: transparent;
+    }
+
+    &__link {
+      color: var(--color-black);
+    }
+
+    &__item-social {
+      position: relative;
+      color: #187cd3;
+
+      &::after {
+        content: "";
+        position: absolute;
+        right: 5px;
+        top: 50%;
+        width: 5px;
+        height: 5px;
+        background-color: var(--color-dark);
+        transform: translate(-50%, 50%);
+      }
+    }
+
+    &__sub-item {
+      position: absolute;
+      bottom: -110px;
+      flex-wrap: wrap;
+      justify-content: center;
+      justify-items: center;
+      padding: 19px;
+      width: 174px;
+      height: 138px;
+      background-color: var(--color-white);
+      opacity: 1;
+    }
+
+    &__link-social {
+      border: 1px solid #e0e0e0;
+      width: 68px;
+      height: 50px;
+
+      &:hover {
+        .icon__menu {
+          fill: var(--color-main-blue);
+        }
+      }
+
+      &:first-child {
+        .icon__menu {
+          width: 1.35em;
+        }
+      }
+
+      &:last-child {
+        .icon__menu {
+          width: 1em;
+        }
+      }
+
+      &:nth-child(2) {
+        .icon__menu {
+          width: 0.7em;
+        }
+      }
+
+      &:nth-child(3) {
+        .icon__menu {
+          width: 0.63em;
+        }
+      }
+    }
+
+    .icon__menu {
+      fill: var(--color-orange);
+      transition: fill 0.3s;
+    }
   }
+}
+
+.main {
+  margin-top: 36px;
 }
