--- a/#src/scss/adaptive/_desktop.scss
+++ b/#src/scss/adaptive/_desktop.scss
@@ -3,6 +3,7 @@
 }
 
 .body__wrapper {
+  z-index: 9;
   padding: 0;
   background-color: var(--color-white);
 }
@@ -10,10 +11,9 @@
 .header {
   position: relative;
   border-bottom: 1px solid #f2f2f2;
-  max-height: 98px;
 
   .menu {
-    max-height: 98px;
+    max-height: 96px;
 
     &__list {
       display: flex;
@@ -29,25 +29,27 @@
       display: flex;
       align-items: center;
       margin: 0;
-      padding: 0;
-      height: 98px;
+      padding: 10px 0 0;
+      height: 88px;
       font-size: 16px;
       line-height: 1.25em;
 
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 2px;
-        background-color: var(--color-orange);
-        opacity: 0;
-        transition: opacity 0.3s;
-      }
-
       &:not(:first-child) {
         margin-top: 0;
+      }
+
+      &:not(:last-child) {
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 2px;
+          background-color: var(--color-orange);
+          opacity: 0;
+          transition: opacity 0.3s;
+        }
       }
 
       &:hover {
@@ -67,6 +69,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      margin-top: 11px;
+      margin-right: 11px;
       width: 868px;
       background-color: transparent;
     }
@@ -77,23 +81,29 @@
 
     &__item-social {
       position: relative;
+      font-size: 14px;
       color: #187cd3;
+      cursor: pointer;
 
       &::after {
         content: "";
         position: absolute;
-        right: 5px;
-        top: 50%;
-        width: 5px;
-        height: 5px;
-        background-color: var(--color-dark);
-        transform: translate(-50%, 50%);
+        right: -11px;
+        top: 53%;
+        border-style: solid;
+        border-width: 5px 2.5px 0;
+        border-color: var(--color-dark) transparent transparent;
+        width: 0;
+        height: 0;
+        transform: rotate(360deg);
       }
     }
 
     &__sub-item {
       position: absolute;
       bottom: -110px;
+      z-index: 2;
+      display: none;
       flex-wrap: wrap;
       justify-content: center;
       justify-items: center;
@@ -101,6 +111,13 @@
       width: 174px;
       height: 138px;
       background-color: var(--color-white);
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .social-links-active {
+      z-index: 10;
+      display: flex;
       opacity: 1;
     }
 
@@ -145,8 +162,153 @@
       transition: fill 0.3s;
     }
   }
+
+  .icon__logo {
+    margin-top: 9px;
+    margin-left: 38px;
+  }
 }
 
 .main {
+  overflow: hidden;
   margin-top: 36px;
+  min-height: 448px;
+  background:
+    url("../../img/hero/hero-girls.png") no-repeat,
+    url("../../img/hero/hero-bg2.png") no-repeat,
+    url("../../img/hero/hero-bg.jpg") no-repeat;
+  background-position-x: 79%, 15%, 90%;
+  background-position-y: 100%, 35%, 81%;
+  background-size: 36%, contain, 56%;
+
+  &__container {
+    padding: 95px 0;
+    height: 100%;
+    max-width: 1150px;
+  }
+
+  &__title {
+    margin-top: 23px;
+    font-weight: 700;
+    font-size: 36px;
+  }
+
+  &__btn {
+    margin-left: 2px;
+    font-size: 16px;
+  }
+}
+
+.plus {
+  &__wrapper {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__slide {
+    position: relative;
+    border: 1px solid #ededed;
+    width: 100%;
+    height: 377px;
+    max-width: 399px;
+    transition: box-shadow 0.3s;
+
+    &:hover {
+      box-shadow: 0 0 20px 15px rgba(112, 112, 112, 0.1);
+
+      .plus__icon {
+        fill: var(--color-orange);
+        stroke: var(--color-orange);
+      }
+
+      .plus__desc {
+        opacity: 1;
+      }
+    }
+
+    &:nth-child(4) {
+      .plus__icon {
+        fill: transparent;
+        stroke: #4f4f4f;
+        stroke-width: 3;
+      }
+
+      &:hover {
+        .plus__icon {
+          stroke: var(--color-orange);
+        }
+      }
+    }
+
+    &:nth-child(6) {
+      .plus__icon {
+        fill: #4f4f4f;
+      }
+
+      &:hover {
+        .plus__icon {
+          fill: var(--color-orange);
+        }
+      }
+    }
+  }
+
+  &__img {
+    text-align: center;
+  }
+
+  &__icon {
+    width: 80%;
+  }
+}
+
+.boss {
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: 50%;
+  }
+
+  &__container {
+    max-width: 1240px;
+  }
+
+  &__slider {
+    margin-top: 50px;
+    background-color: #f7f7f7;
+  }
+
+  &__slide {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-left: 30px;
+    max-height: 446px;
+  }
+
+  &__name {
+    margin-top: 80px;
+    line-height: 1.29em;
+  }
+
+  &__photo {
+    flex: 1 1 auto;
+    order: 4;
+    width: 36%;
+    background-position: center bottom;
+  }
+
+  &__desc {
+    height: 128px;
+  }
+
+  &__name,
+  &__sub-title {
+    height: 28px;
+  }
+
+  &__name,
+  &__sub-title,
+  &__desc {
+    width: 640px;
+    text-align: left;
+  }
 }
