--- a/#src/scss/adaptive/_tablet.scss
+++ b/#src/scss/adaptive/_tablet.scss
@@ -11,7 +11,10 @@
 }
 
 .main {
-  background: url("../../img/hero/hero-girls.png") no-repeat, url("../../img/hero/hero-bg2-tablet.png") no-repeat, url("../../img/hero/hero-bg-tablet.png") no-repeat;
+  background:
+    url("../../img/hero/hero-girls.png") no-repeat,
+    url("../../img/hero/hero-bg2-tablet.png") no-repeat,
+    url("../../img/hero/hero-bg-tablet.png") no-repeat;
   background-position-x: 140%, -5%, 103%;
   background-position-y: 100%, 100%, 190%;
   background-size: 69%, 81%, 88%;
@@ -48,6 +51,7 @@
   }
 
   &__slide {
+    justify-content: center;
     width: 100%;
     height: 344px;
     max-width: 344px;
