--- a/#src/scss/adaptive/_desktop.scss
+++ b/#src/scss/adaptive/_desktop.scss
@@ -207,6 +207,7 @@
 
   &__slide {
     position: relative;
+    align-items: center;
     border: 1px solid #ededed;
     width: 100%;
     height: 377px;
@@ -266,6 +267,7 @@
   .swiper-button-next,
   .swiper-button-prev {
     top: 50%;
+    display: flex;
   }
 
   &__container {
@@ -279,7 +281,9 @@
 
   &__slide {
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
+    margin: 0 -10px;
     padding-left: 30px;
     max-height: 446px;
   }
@@ -310,5 +314,87 @@
   &__desc {
     width: 640px;
     text-align: left;
+  }
+}
+
+.values {
+  padding: 50px 0;
+
+  &__wrapper {
+    padding: 0;
+  }
+
+  .swiper-slide {
+    align-items: auto;
+  }
+
+  &__item {
+    &-title {
+      display: block;
+      padding: 56px 50px 0;
+      max-width: 297px;
+    }
+
+    &-desc {
+      padding: 10px 50px 35px;
+      font-size: 16px;
+      line-height: 1.875em;
+    }
+  }
+}
+
+.vacancies {
+  &__container {
+    max-width: 1192px;
+  }
+
+  &__radio {
+    &-wrapper {
+      justify-content: space-around;
+    }
+
+    &-item {
+      max-width: 331px;
+    }
+  }
+}
+
+.vacancy {
+  &__wrapper {
+    justify-content: space-evenly;
+    margin: 0 auto;
+    height: 350px;
+    max-width: 1118px;
+  }
+
+  &__item {
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 0 17px 5px rgba(0, 0, 0, 0.1);
+
+      .vacancy__img {
+        background-color: var(--color-orange);
+      }
+    }
+
+    &:nth-child(odd) {
+      margin-right: 0;
+    }
+  }
+
+  &__img {
+    transition: 0.3s;
+  }
+
+  &__salary {
+    width: 238px;
+    font-size: 15px;
+    text-align: center;
+    color: var(--color-dark);
+  }
+
+  &-open {
+    height: 700px;
   }
 }
