--- a/#src/scss/adaptive/_desktop.scss
+++ b/#src/scss/adaptive/_desktop.scss
@@ -173,9 +173,7 @@
   overflow: hidden;
   margin-top: 36px;
   min-height: 448px;
-  background:
-    url("../../img/hero/hero-girls.png") no-repeat,
-    url("../../img/hero/hero-bg2.png") no-repeat,
+  background: url("../../img/hero/hero-girls.png") no-repeat, url("../../img/hero/hero-bg2.png") no-repeat,
     url("../../img/hero/hero-bg.jpg") no-repeat;
   background-position-x: 79%, 15%, 90%;
   background-position-y: 100%, 35%, 81%;
@@ -344,6 +342,8 @@
 }
 
 .vacancies {
+  padding-bottom: 90px;
+
   &__container {
     max-width: 1192px;
   }
@@ -361,8 +361,9 @@
 
 .vacancy {
   &__wrapper {
-    justify-content: space-evenly;
+    justify-content: normal;
     margin: 0 auto;
+    padding: 0 35px;
     height: 350px;
     max-width: 1118px;
   }
@@ -370,16 +371,16 @@
   &__item {
     cursor: pointer;
 
+    &:not(:nth-child(3n + 3)) {
+      margin-right: 32px;
+    }
+
     &:hover {
       box-shadow: 0 0 17px 5px rgba(0, 0, 0, 0.1);
 
       .vacancy__img {
         background-color: var(--color-orange);
       }
-    }
-
-    &:nth-child(odd) {
-      margin-right: 0;
     }
   }
 
@@ -395,6 +396,158 @@
   }
 
   &-open {
-    height: 700px;
+    height: auto;
+  }
+}
+
+.students {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 86px 0 106px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 4;
+    width: 50%;
+    height: 100%;
+    background-color: #f9f9f9;
+  }
+
+  &::before {
+    left: 0;
+    border-radius: 0 36px 36px 0;
+  }
+
+  &::after {
+    right: 0;
+    border-radius: 36px 0 0 36px;
+  }
+
+  &__wrapper {
+    display: flex;
+  }
+
+  &__item {
+    width: 100%;
+    max-width: 221px;
+
+    &:not(:last-child) {
+      margin-right: 116px;
+    }
+
+    &:nth-child(3) {
+      .students__icon {
+        fill: none;
+      }
+    }
+  }
+
+  &__img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: var(--color-white);
+  }
+
+  &__icon {
+    width: 30%;
+    height: 30%;
+    fill: #242627;
+    stroke: #242627;
+    stroke-width: 0.5;
+  }
+
+  &__desc {
+    margin-top: 39px;
+    text-align: center;
+  }
+
+  &__form {
+    margin-top: 84px;
+  }
+
+  &__title,
+  &__subtitle,
+  &__wrapper,
+  &__form {
+    z-index: 5;
+  }
+}
+
+.history {
+  &__container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1560px;
+  }
+
+  &__slider {
+    margin: 0;
+    padding: 47px 20px 0;
+    width: 100%;
+    max-width: 1480px;
+  }
+
+  &__slide {
+    max-width: 1480px;
+  }
+
+  &__content {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 0 20px;
+    height: 446px;
+    max-width: 1480px;
+    box-shadow: 0 16px 10px 0 rgba(50, 50, 50, 0.1);
+
+    &::after {
+      width: 1396px;
+    }
+  }
+
+  &__photo {
+    flex: 1 1 auto;
+    order: 5;
+    border-radius: 0;
+    width: 18%;
+    height: 100%;
+    background: url("../../img/history/history.png") no-repeat;
+  }
+
+  &__name {
+    order: 1;
+    font-size: 36px;
+    line-height: 28px;
+  }
+
+  &__role {
+    order: 2;
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  &__quote {
+    display: block;
+    order: 3;
+    max-width: 630px;
+    font-size: 22px;
+    line-height: 32px;
+  }
+
+  &__link {
+    order: 4;
+    font-size: 16px;
+    line-height: 1.25em;
   }
 }
